# OpenGeminiWatermarkTool

./: .gitignore  README.md  build.sh  docker-compose.yml
.github/agents/: copilot-instructions.md
.github/workflows/: build.yml
.specify/memory/: constitution.md
specs/001-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-web-app/checklists/: requirements.md
specs/001-web-app/contracts/: api.openapi.yaml
web/backend/: .env.example  Dockerfile  Dockerfile.local  pyproject.toml  requirements-dev.txt  requirements.txt
web/backend/src/: __init__.py  main.py
web/backend/src/api/: __init__.py  middleware.py  models.py  routes.py
web/backend/src/core/: __init__.py  config.py  exceptions.py  logging.py
web/backend/src/services/: file_service.py  turnstile_service.py  watermark_service.py
web/backend/src/utils/: binary_executor.py  validators.py
web/frontend/: .env.example  next.config.js  package-lock.json  package.json
web/frontend/src/app/: layout.tsx  page.tsx
web/frontend/src/components/: ImagePreview.tsx  ProcessingIndicator.tsx  TurnstileWidget.tsx  UploadZone.tsx
web/frontend/src/services/: watermarkApi.ts
web/frontend/src/styles/: globals.css  theme.ts
web/frontend/src/types/: api.ts
